--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h2 class="h2 title section-title" id="process-lable">
                 How It Works 
             </h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore dolore temporibus ipsa, voluptatum perspiciatis iure debitis, quod minus quidem vero, beatae repellendus eius distinctio rerum consequatur necessitatibus libero suscipit fugit!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
              <div class="wrapper">
                 <figure class="process-banner">
                     <img src="/assets/images/process-banner.png"
@@ -91,28 +91,28 @@
                         <img src="/assets//images//process-icon-1.png" alt="process-icon-1" width="60" height="60" alt="" class="item-icon"/>
                         <h3 class="h3 title item-title">Ideation</h3>
                        <p class="item-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero totam possimus perferendis, ea quasi optio excepturi sapiente distinctio tempora dolor dolore reprehenderit odit voluptas deserunt quidem molestiae rem commodi esse!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                        </p>
                     </li>
                     <li class="process-item">
                         <img src="/assets/images/process-icon-2.png" alt="process-icon-2" width="60" height="60" alt="" class="item-icon"/>
                         <h3 class="h3 title item-title">Budget</h3>
                        <p class="item-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero totam possimus perferendis, ea quasi optio excepturi sapiente distinctio tempora dolor dolore reprehenderit odit voluptas deserunt quidem molestiae rem commodi esse!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                        </p>
                     </li>
                     <li class="process-item">
                         <img src="/assets//images/process-icon-3.png" alt="process-icon-1" width="60" height="60" alt="" class="item-icon"/>
                         <h3 class="h3 title item-title">Performance</h3>
                        <p class="item-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero totam possimus perferendis, ea quasi optio excepturi sapiente distinctio tempora dolor dolore reprehenderit odit voluptas deserunt quidem molestiae rem commodi esse!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                        </p>
                     </li>
                     <li class="process-item">
                         <img src="/assets//images/process-icon-4.png" alt="process-icon-1" width="60" height="60" alt="" class="item-icon"/>
                         <h3 class="h3 title item-title">Speed</h3>
                        <p class="item-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero totam possimus perferendis, ea quasi optio excepturi sapiente distinctio tempora dolor dolore reprehenderit odit voluptas deserunt quidem molestiae rem commodi esse!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                        </p>
                     </li>
                 </ul>
